Ensure long product names wrap properly

--- a/ui/src/Assignments/PersonAndRoleInfo.scss
+++ b/ui/src/Assignments/PersonAndRoleInfo.scss
@@ -26,6 +26,7 @@
   .personName {
     display: flex;
     align-items: flex-end;
+    word-break: break-word;
   }
 
   .notesIcon {
